feat: available resouce of task_type
