# docs/swagger.json
@@ -543,7 +543,7 @@
         },
         "/api/v1/task_type": {
             "get": {
-                "description": "Get a list of all task types",
+                "description": "Get a list of all task types with available resources",
                 "produces": [
                     "application/json"
                 ],
@@ -553,7 +553,7 @@
                 "summary": "Get all task types",
                 "responses": {
                     "200": {
-                        "description": "List of task types",
+                        "description": "List of task types with available resources",
                         "schema": {
                             "allOf": [
                                 {
@@ -2065,6 +2065,10 @@
         "models.TaskType": {
             "type": "object",
             "properties": {
+                "available_resources": {
+                    "type": "integer",
+                    "example": 2
+                },
                 "created_at": {
                     "type": "string",
                     "example": "2023-01-01T00:00:00Z"
